fix(exe format): sekarang formmat exe berjalan normal